Add units/selectors to translation files

--- a/packages/stateofjs/lib/surveys/yml/css2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2020outline.yml
@@ -96,7 +96,7 @@ outline:
       # - prefers-contrast # not supported yet
       # - forced-colors # not supported yet
       # - inverted-colors # not supported yet
-      
+
   - id: other_features
     template: feature
     slug: features
@@ -119,18 +119,18 @@ outline:
         randomize: false
         suffix: choices
         options:
-          - px
-          - pt
-          - '%'
-          - em
-          - rem
-          - vh, vw
-          - vmin, vmax
-          - ch
-          - ex
-          - mm
-          - cm
-          - in
+          - id: px
+          - id: pt
+          - id: percent
+          - id: em
+          - id: rem
+          - id: vh_vw
+          - id: vmin_vmax
+          - id: ch
+          - id: ex
+          - id: mm
+          - id: cm
+          - id: in
 
       - id: pseudo_elements
         template: multiple
@@ -139,14 +139,14 @@ outline:
         randomize: false
         suffix: choices
         options:
-          - ::before
-          - ::after
-          - ::first-line
-          - ::first-letter
-          - ::selection
-          - ::placeholder
-          - ::marker
-          - ::backdrop
+          - id: before
+          - id: after
+          - id: first_line
+          - id: first_letter
+          - id: selection
+          - id: placeholder
+          - id: marker
+          - id: backdrop
 
       - id: combinators
         template: multiple
@@ -155,10 +155,10 @@ outline:
         randomize: false
         suffix: choices
         options:
-          - div span (descendant)
-          - div > span (child)
-          - div + div (next sibling)
-          - div ~ div (subsequent sibling)
+          - id: descendant
+          - id: child
+          - id: next_subling
+          - id: subsequent_sibling
 
       - id: tree_document_structure
         template: multiple
@@ -167,24 +167,23 @@ outline:
         randomize: false
         suffix: choices
         options:
-          - :root
-          - :empty
-          - :not()
-          - :nth-child()
-          - :nth-last-child()
-          - :first-child
-          - :last-child
-          - :only-child
-          - :nth-of-type()
-          - :nth-last-of-type()
-          - :first-of-type
-          - :last-of-type
-          - :only-of-type
-          - :target
-          - :lang()
-          - :is()
-          - :where()
-          # - :has() # not yet supported, add next year?
+          - id: root
+          - id: empty
+          - id: not
+          - id: nth_child
+          - id: nth_last_child
+          - id: first_child
+          - id: last_child
+          - id: only_child
+          - id: nth_of_type
+          - id: nth_last_of_type
+          - id: first_of_type
+          - id: last_of_type
+          - id: only_of_type
+          - id: lang
+          - id: is
+          - id: where
+          # - id: has # not yet supported, add next year?
 
       - id: attributes
         template: multiple
@@ -193,13 +192,12 @@ outline:
         randomize: false
         suffix: choices
         options:
-          - div[foo] (Presence)
-          - div[foo="bar"] (Equality)
-          - div[foo^="bar"] (Starts with)
-          - div[foo$="bar"] (Ends with)
-          - div[foo~="bar"] (Contains word)
-          - div[foo*="bar"] (Contains substring)
-          # - Case sensitivity (div[foo="bar" s] vs (div[foo="bar" i])
+          - id: presence
+          - id: equality
+          - id: starts_with
+          - id: ends_with
+          - id: contains_word
+          - id: contains_substring
 
       - id: links_urls
         template: multiple
@@ -208,10 +206,10 @@ outline:
         randomize: false
         suffix: choices
         options:
-          - :any-link
-          - :link and :visited
-          - :local-link
-          - :target
+          - id: any_link
+          - id: link_visited
+          - id: local_link
+          - id: target
 
       - id: interaction
         template: multiple
@@ -220,11 +218,11 @@ outline:
         randomize: false
         suffix: choices
         options:
-          - :hover
-          - :active
-          - :focus
-          - :focus-within
-          - :focus-visible
+          - id: hover
+          - id: active
+          - id: focus
+          - id: focus_within
+          - id: focus_visible
 
       - id: form_controls
         template: multiple
@@ -233,17 +231,16 @@ outline:
         randomize: false
         suffix: choices
         options:
-          - :enabled and :disabled
-          - :read-only and :read-write
-          - :placeholder-shown
-          - :default
-          - :checked
-          - :indeterminate
-          - :valid and :invalid
-          - :user-invalid
-          - :in-range and :out-of-range
-          - :required and :optional
-
+          - id: enabled_disabled
+          - id: read_only_write
+          - id: placeholder_shown
+          - id: default
+          - id: checked
+          - id: indeterminate
+          - id: valid_invalid
+          - id: user_invalid
+          - id: in_out_range
+          - id: required_optional
 
   ### TOOLS ###
 
@@ -525,6 +522,7 @@ outline:
       - id: enjoy_writing_css
         template: opinion
       - id: currently_missing_from_css
+        sectionSlug: opinions_other
         suffix: others
         template: longtext
       - id: state_of_the_web
