Work on translations and entities ids

--- a/packages/stateofjs/lib/surveys/yml/css2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2020outline.yml
@@ -110,7 +110,7 @@ outline:
       - id: comparison_functions
 
   - id: units_selectors
-    slug: features
+    slug: features_others
     questions:
       - id: units
         template: multiple
@@ -248,10 +248,14 @@ outline:
     template: tool
     slug: tools
     questions:
-      - Sass
-      - Less
-      - PostCSS
-      - Stylus
+      - id: sass
+      - id: less
+      - id: postcss
+      - id: stylus
+      # - Sass
+      # - Less
+      # - PostCSS
+      # - Stylus
       - id: pre_post_processors
         intlId: tools.other_tools
         template: text
@@ -266,23 +270,40 @@ outline:
     template: tool
     slug: tools
     questions:
-      - Bootstrap
-      - Materialize CSS
-      - Ant Design
-      - Semantic UI
-      - Bulma
-      - Foundation
-      - UIKit
-      - Tachyons
-      - Primer
+      - id: bootstrap
+      - id: materialize_css
+      - id: ant_design
+      - id: semantic_ui
+      - id: bulma
+      - id: foundation
+      - id: uikit
+      - id: tachyons
+      - id: primer
       - id: tailwind
-        alias: Tailwind CSS
-      - PureCSS
-      - Skeleton
-      - Spectre
-      # - Milligram
-      # - BassCSS
-      # - No Framework
+      - id: purecss
+      - id: skeleton
+      - id: spectre
+      # id: - milligram
+      # id: - basscss
+      # id: - no_css_framework
+
+      # - Bootstrap
+      # - Materialize CSS
+      # - Ant Design
+      # - Semantic UI
+      # - Bulma
+      # - Foundation
+      # - UIKit
+      # - Tachyons
+      # - Primer
+      # - id: tailwind
+      #   alias: Tailwind CSS
+      # - PureCSS
+      # - Skeleton
+      # - Spectre
+      # # - Milligram
+      # # - BassCSS
+      # # - No Framework
       - id: css_frameworks
         intlId: tools.other_tools
         template: text
@@ -297,12 +318,12 @@ outline:
     template: tool
     slug: tools
     questions:
-      - BEM
-      - id: atomiccss
-      - OOCSS
-      - SMACSS
-      - IT CSS
-      - CUBE CSS
+      - id: bem
+      - id: atomic_css
+      - id: oocss
+      - id: smacss
+      - id: it_css
+      - id: cube_css
       - id: css_methodologies
         intlId: tools.other_tools
         template: text
@@ -320,17 +341,28 @@ outline:
       - Styled Components
       # - Glamor # deprecated
       # - Aphrodite # not actively maintained?
-      - JSS
-      - Styled-JSX
-      - Radium
-      - Emotion
-      - CSS Modules
-      - Styled System
-      - Stitches
-      - Styletron
-      - Fela
-      - Linaria
-      - Astroturf
+      - id: jss
+      - id: styled_jsx
+      - id: radium
+      - id: emotion
+      - id: css_modules
+      - id: styled_system
+      - id: stitches
+      - id: styletron
+      - id: fela
+      - id: linaria
+      - id: astroturf
+      # - JSS
+      # - Styled-JSX
+      # - Radium
+      # - Emotion
+      # - CSS Modules
+      # - Styled System
+      # - Stitches
+      # - Styletron
+      # - Fela
+      # - Linaria
+      # - Astroturf
       - id: css_in_js
         intlId: tools.other_tools
         template: text
@@ -344,56 +376,54 @@ outline:
   ### OTHER TOOLS ###
 
   - id: other_tools
-    slug: other_tools
+    slug: tools_other
     questions:
       - id: utilities
         template: multiple
-        allowmultiple: true
         options:
-          - Stylelint
-          - PurgeCSS
-          - PurifyCSS
+          - id: stylelint
+          - id: purgecss
+          - id: purifycss
+
+          # - Stylelint
+          # - PurgeCSS
+          # - PurifyCSS
       - id: utilities
-        suffix: others
-        template: text
+        template: others
       - id: text_editors
         template: multiple
-        allowmultiple: true
         options:
-          - VS Code
-          - Sublime Text
-          - Atom
-          - Vim
-          - Emacs
-          - Webstorm
-          - Nova
+          - id: vs_code
+          - id: sublime_text
+          - id: atom
+          - id: vim
+          - id: emacs
+          - id: webstorm
+          - id: nova
       - id: text_editors
-        suffix: others
-        template: text
+        template: others
       - id: browsers
         template: multiple
-        allowmultiple: true
         options:
-          - Edge
-          - Chrome
-          - Safari
-          - Firefox
-          - Internet Explorer 11
-          - Internet Explorer 8/9/10
-          - Opera Mini
-          - Safari iOS
-          - Chrome iOS
-          - Chrome Android
-          - Firefox Android
-          - Samsung Internet
-          - Vivaldi
-          - Brave
-          - UC Browser
-          - Opera
-          - Polypane
+          - id: edge
+          - id: chrome
+          - id: safari
+          - id: firefox
+          - id: internet_explorer_11
+          - id: internet_explorer_8_9_10
+          - id: opera_mini
+          - id: safari_ios
+          - id: chrome_ios
+          - id: chrome_android
+          - id: firefox_android
+          - id: samsung_internet
+          - id: vivaldi
+          - id: brave
+          - id: ub_browser
+          - id: opera
+          - id: polypane
       - id: browsers
-        suffix: others
-        template: text
+        template: others
 
   ### ENVIRONMENTS ###
   - id: environments
@@ -402,36 +432,54 @@ outline:
       - id: browsers
         template: multiple
         options:
-          - Edge
-          - Chrome
-          - Safari
-          - Firefox
-          - Internet Explorer 11
-          - Internet Explorer 8/9/10
-          - Opera Mini
-          - Safari iOS
-          - Chrome iOS
-          - Chrome Android
-          - Firefox Android
-          - Samsung Internet
-          - Vivaldi
-          - Brave
-          - UC Browser
-          - Opera
-          - Polypane
+          - id: edge
+          - id: chrome
+          - id: safari
+          - id: firefox
+          - id: internet_explorer_11
+          - id: internet_explorer_8_9_10
+          - id: opera_mini
+          - id: safari_ios
+          - id: chrome_ios
+          - id: chrome_android
+          - id: firefox_android
+          - id: samsung_internet
+          - id: vivaldi
+          - id: brave
+          - id: ub_browser
+          - id: opera
+          - id: polypane
+
+          # - Edge
+          # - Chrome
+          # - Safari
+          # - Firefox
+          # - Internet Explorer 11
+          # - Internet Explorer 8/9/10
+          # - Opera Mini
+          # - Safari iOS
+          # - Chrome iOS
+          # - Chrome Android
+          # - Firefox Android
+          # - Samsung Internet
+          # - Vivaldi
+          # - Brave
+          # - UC Browser
+          # - Opera
+          # - Polypane
 
       - id: form_factors
         template: multiple
         options:
-          - Desktop
-          - Smartphone
-          - Feature Phone
-          - Tablet
-          - Smart Watch
-          - TV
-          - Gaming Console
-          - Screen Reader
-          - Print
+          - id: desktop
+          - id: smartphone
+          - id: feature_phone
+          - id: tablet
+          - id: smart_watch
+          - id: tv
+          - id: gaming_console
+          - id: screen_reader
+          - id: print
 
       - id: css_for_print
         template: single
@@ -459,50 +507,77 @@ outline:
       - id: blogs_news_magazines
         template: multiple
         options:
-          - CSS Tricks
-          - Smashing Magazine
-          - CoDrops
-          - SitePoint
-          - David Walsh
-          - Dev.to
-          - Sidebar
-          - HeyDesigner
-          - CSS Weekly
-          - Frontend Horse
+          - id: css_tricks
+          - id: smashing_magazine
+          - id: codrops
+          - id: sitepoint
+          - id: david_walsh
+          - id: dev_to
+          - id: sidebar
+          - id: heydesigner
+          - id: css_weekly
+          - id: frontend_horse
+
+          # - CSS Tricks
+          # - Smashing Magazine
+          # - CoDrops
+          # - SitePoint
+          # - David Walsh
+          # - Dev.to
+          # - Sidebar
+          # - HeyDesigner
+          # - CSS Weekly
+          # - Frontend Horse
       - id: blogs_news_magazines
-        template: text
-        suffix: others
+        template: others
 
       - id: sites_courses
         template: multiple
         options:
-          - Stack Overflow
-          - MDN
-          - W3Schools
-          - FreeCodeCamp
-          - Codecademy
-          - LevelUp Tutorials
-          - Wes Bos Courses (CSSGrid.io, Flexbox.io, etc.)
-          - Pluralsight
-          - DesignCode
+          - id: stack_overflow
+          - id: mdn
+          - id: w3schools
+          - id: freecodecamp
+          - id: codecademy
+          - id: levelup_tutorials
+          - id: wes_bos_courses
+          - id: pluralsight
+          - id: designcode
+
+          # - Stack Overflow
+          # - MDN
+          # - W3Schools
+          # - FreeCodeCamp
+          # - Codecademy
+          # - LevelUp Tutorials
+          # - Wes Bos Courses (CSSGrid.io, Flexbox.io, etc.)
+          # - Pluralsight
+          # - DesignCode
       - id: sites_courses
-        template: text
-        suffix: others
+        template: others
 
       - id: podcasts
         template: multiple
         options:
-          - Shop Talk Show
-          - Style Guide Podcast
-          - The Big Web Show
-          - The Web Ahead
-          - Non Breaking Space Show
-          - The Changelog
-          - Syntax
-          - CSS Podcast
+          - id: shop_talk_show
+          - id: style_guide_podcast
+          - id: the_big_web_show
+          - id: the_web_ahead
+          - id: non_breaking_space_show
+          - id: the_changelog
+          - id: syntax
+          - id: css_podcast
+
+          # - Shop Talk Show
+          # - Style Guide Podcast
+          # - The Big Web Show
+          # - The Web Ahead
+          # - Non Breaking Space Show
+          # - The Changelog
+          # - Syntax
+          # - CSS Podcast
       - id: podcasts
-        template: text
-        suffix: others
+        template: others
 
     ### OPINIONS ###
 
