Work on entities translations

--- a/packages/stateofjs/lib/surveys/yml/css2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2020outline.yml
@@ -157,7 +157,7 @@ outline:
         options:
           - id: descendant
           - id: child
-          - id: next_subling
+          - id: next_sibling
           - id: subsequent_sibling
 
       - id: tree_document_structure
