--- a/packages/stateofjs/lib/surveys/yml/css2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2020outline.yml
@@ -259,7 +259,7 @@ outline:
       - id: pre_post_processors
         intlId: tools.other_tools
         template: text
-        sectionSlug: sections_other_tools
+        sectionSlug: tools_others
         suffix: others
       - id: pre_post_processors
         intlId: tools.happiness
@@ -290,7 +290,7 @@ outline:
       - id: css_frameworks
         intlId: tools.other_tools
         template: text
-        sectionSlug: sections_other_tools
+        sectionSlug: tools_others
         suffix: others
       - id: css_frameworks
         intlId: tools.happiness
@@ -310,7 +310,7 @@ outline:
       - id: css_methodologies
         intlId: tools.other_tools
         template: text
-        sectionSlug: sections_other_tools
+        sectionSlug: tools_others
         suffix: others
       - id: css_methodologies
         intlId: tools.happiness
@@ -349,7 +349,7 @@ outline:
       - id: css_in_js
         intlId: tools.other_tools
         template: text
-        sectionSlug: sections_other_tools
+        sectionSlug: tools_others
         suffix: others
       - id: css_in_js
         intlId: tools.happiness
@@ -359,7 +359,7 @@ outline:
   ### OTHER TOOLS ###
 
   - id: other_tools
-    slug: tools_other
+    slug: tools_others
     questions:
       - id: utilities
         template: multiple
