Use numerical indexes for ratings translations

--- a/packages/stateofjs/lib/surveys/yml/js2019outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/js2019outline.yml
@@ -7,7 +7,7 @@
 ### FEATURES ###
 
 slug: js2019
-namespace: js
+context: state_of_js
 topic: JavaScript
 createdAt: December 1, 2019
 prettySlug: state-of-js
