--- a/packages/stateofjs/lib/surveys/yml/css2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2020outline.yml
@@ -7,7 +7,7 @@
 ### FEATURES ###
 
 slug: css2020 # used as first part of field names
-namespace: css
+context: state_of_css
 topic: CSS
 createdAt: October 1, 2020
 prettySlug: state-of-css
