--- a/package.json
+++ b/package.json
@@ -89,7 +89,9 @@
     "react-addons-pure-render-mixin": "^15.6.2",
     "react-bootstrap": "1.3.0",
     "react-bootstrap-typeahead": "^5.1.1",
+    "react-confetti": "^6.0.0",
     "react-cookie": "^4.0.3",
+    "react-countup": "^4.3.3",
     "react-datetime": "^3.0.4",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.0",
