Add more languages; remove "direction" feature

--- a/packages/stateofjs/lib/surveys/yml/css2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2020outline.yml
@@ -72,7 +72,7 @@ outline:
       - id: font_display
       - id: line_clamp
       # - id: leading_trim
-      - id: direction
+      # - id: direction
 
   - id: animations_transforms
     template: feature
