Add more projects

--- a/packages/stateofjs/lib/surveys/yml/js2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/js2020outline.yml
@@ -141,6 +141,7 @@ outline:
       - id: preact
       - id: ember
       - id: svelte
+      - id: alpine_js
       - id: front_end_frameworks
         intlId: tools.other_tools
         template: text
@@ -182,6 +183,9 @@ outline:
       - id: feathers
       - id: nuxtjs
       - id: gatsby
+      - id: nest
+      - id: strapi
+      - id: razzle
       - id: datalayer
         intlId: tools.other_tools
         template: text
@@ -213,6 +217,22 @@ outline:
         intlId: tools.happiness
         template: happiness
         sectionSlug: happiness
+
+  - id: graphics_animation
+    template: tool
+    slug: tools
+    questions:
+      - id: d3
+      - id: three_js
+      - id: fabric_js
+      - id: visx
+      - id: nivo
+      - id: recharts
+      - id: anime_js
+      - id: popmotion
+      - id: gsap
+      - id: lottie
+      - id: velocity
 
   - id: mobile_desktop
     template: tool
@@ -296,6 +316,9 @@ outline:
           - id: rollup
           - id: fusebox
           - id: browserify
+          - id: rome
+          - id: snowpack
+          - id: deno
       - id: build_tools
         template: others
       - id: non_js_languages
