--- a/packages/stateofjs/lib/surveys/yml/js2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/js2020outline.yml
@@ -50,54 +50,35 @@ outline:
     template: feature
     slug: features
     questions:
-      - title: Maps
-        id: maps
-      - title: Sets
-        id: sets
-      - title: Typed Arrays
-        id: typed_arrays
-      - title: Array.prototype.flat
-        id: array_prototype_flat
-      - title: big_int
-        id: array_prototype_flat
+      - id: maps
+      - id: sets
+      - id: typed_arrays
+      - id: array_prototype_flat
+      - id: big_int
 
   - id: browser_apis
     template: feature
     slug: features
     questions:
-      - title: Service Workers
-        id: service_workers
-      - title: LocalStorage
-        id: local_storage
-      - title: i18n
-        id: i18n
-      - title: Web Components
-        id: web_components
-      - title: Web Audio API
-        id: web_audio
-      - title: WebGL
-        id: webgl
-      - title: Web Animations API
-        id: web_animations
-      - title: WebRTC
-        id: webrtc
-      - title: Web Speech API
-        id: web_speech
-      - title: WebVR
-        id: webvr
-      - title: Websocket
-        id: websocket
-      - title: Fetch API
-        id: fetch
+      - id: service_workers
+      - id: local_storage
+      - id: i18n
+      - id: web_components
+      - id: web_audio
+      - id: webgl
+      - id: web_animations
+      - id: webrtc
+      - id: web_speech
+      - id: webvr
+      - id: websocket
+      - id: fetch
 
   - id: other_features
     template: feature
     slug: features
     questions:
-      - title: Progressive Web Apps (PWA)
-        id: pwa
-      - title: WebAssembly (WASM)
-        id: wasm
+      - id: pwa
+      - id: wasm
 
   # - id: patterns
   #   template: pattern
@@ -258,6 +239,8 @@ outline:
       - id: browserify
       - id: rome
       - id: snowpack
+      - id: swc
+      - id: esbuild
       - id: build_tools
         intlId: tools.other_tools
         template: project
