--- a/packages/stateofjs/lib/surveys/yml/js2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/js2020outline.yml
@@ -402,6 +402,7 @@ outline:
           - id: the_web_platform_podcast
           - id: modern_web
           - id: codepen_radio
+          - id: ladybug
       - id: podcasts
         template: others
 
