--- a/packages/stateofjs/lib/surveys/yml/css2021outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2021outline.yml
@@ -6,16 +6,16 @@
 ---
 ### FEATURES ###
 
-slug: css2020 # used as first part of field names
+slug: css2021 # used as first part of field names
 context: state_of_css
 topic: CSS
-createdAt: October 1, 2020
+createdAt: October 30, 2020
 prettySlug: state-of-css
 hashtag: StateOfCSS
 shareUrl: https://stateofcss.com
 name: 'State of CSS'
-year: 2020
-status: 2
+year: 2021
+status: 1
 imageUrl: 'stateofcss2020.png'
 bgColor: '#232840'
 textColor: '#9ac6c9'
@@ -507,6 +507,7 @@ outline:
           - id: changelog
           - id: syntaxfm
           - id: css_podcast
+          - id: frontend_first
 
       - id: podcasts
         template: others
